--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src=" " alt="this is my photo">
+	<h1>My First Heading</h1>
+	<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+	<nav><a href="">about</a>
+                  <a href="">home</a>
+                  <a href="">contact</a>
+                  <a href="">support</a>
+        
+                </nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
